openmediavault (6.0.32-1) stable; urgency=low

  * Issue #1342: Log does not show latest events.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 13 Jul 2022 18:53:31 +0200

openmediavault (6.0.31-2) stable; urgency=low

  * Update locale files.
  * Issue #1330: Add configuration option to set standby mode
    in the 'System | Power Management' page. This setting will
    be used by the scheduled jobs, the 'Power button' action
    and the 'Standby' option in the UI. Defaults to 'Power Off'.
    Make sure to configure it to your needs.
  * Issue #1332: Fix translations in confirmation dialog.
  * Issue #1335: Confirmation dialogs are too wide on wider screens.
  * Issue #1343: Improve selection list layout on small screens.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Jun 2022 23:28:53 +0200

openmediavault (6.0.30-1) stable; urgency=low

  * Various bug fixes in UI.
  * Fix bug in RaidMgmt::remove() RPC.
  * Issue #1326: Add a code editor form field to the UI that can
    be used by plugins to edit JSON, Shell, XML and YAML content.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 16 Jun 2022 14:33:05 +0200

openmediavault (6.0.29-1) stable; urgency=low

  * Remove MultilineRFC2228 option in proftpd configuration.
  * Issue #510: Create correct /etc/hosts if permanent IP addresses
    are used.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 14 Jun 2022 07:14:53 +0200

openmediavault (6.0.28-3) stable; urgency=low

  * Various improvements in the Workbench UI.
  * Add automatic dark mode support in UI.
  * Use HTTP/2 by default for HTTPS connections to the Workbench UI.
  * Issue #1316: Improve color contrast.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 31 May 2022 22:14:52 +0200

openmediavault (6.0.27-1) stable; urgency=low

  * Update locale files.
  * Issue #1302: Add SMART support for QNAP TR-004 (non-RAID mode).
  * Fix bug when user tries to change the password via the UI.